--- a/PrimalEditor/GameProject/NewProjectView.xaml
+++ b/PrimalEditor/GameProject/NewProjectView.xaml
@@ -42,7 +42,8 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                     Margin="0,5,0,0">
-            <Button Content="Create" Width="96" IsDefault="True" IsEnabled="{Binding IsValid}"/>
+            <Button Content="Create" Width="96" IsDefault="True" IsEnabled="{Binding IsValid}"
+                    Click="OnCreate_Button_Click"/>
             <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
         </StackPanel>
         <TextBlock Text="{Binding ErrorMsg}" Margin="0,20,0,0" HorizontalAlignment="Center"/>
